Moved plugin definition into pluginManagement section in parent POM.